<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/pref_category_customization">
        <ListPreference
            app:defaultValue="0"
            app:dialogTitle="@string/dialog_theme_title"
            app:entries="@array/pref_entries_theme"
            app:entryValues="@array/pref_values_theme"
            app:key="pref_key_theme"
            app:title="@string/pref_title_theme"
            app:useSimpleSummaryProvider="true"/>
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="pref_key_color_scheme"
            app:summaryOff="@string/pref_summary_off_color_scheme"
            app:summaryOn="@string/pref_summary_on_color_scheme"
            app:title="@string/pref_title_color_scheme"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/pref_category_cache">
        <Preference
            app:key="pref_key_clear_cache"
            app:summary="@string/pref_summary_cache_clear"
            app:title="@string/pref_title_cache_clear"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/pref_category_about">
        <Preference
            app:key="pref_key_version"
            app:title="@string/pref_title_build_version"/>
        <Preference
            app:key="pref_key_codename"
            app:summary="@string/codename"
            app:title="@string/pref_title_codename"/>
    </PreferenceCategory>
</PreferenceScreen>