<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="-8dp"
        android:orientation="vertical">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/menu_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/menu_sort"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorOnSurface"/>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group_criteria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.ProjectX.Button.SortingButton"
                android:id="@+id/btn_sort_by_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_criteria_name"
                app:icon="@drawable/quantum_ic_text_fields_vd_theme_24"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.ProjectX.Button.SortingButton"
                android:id="@+id/btn_sort_by_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_criteria_date"
                app:icon="@drawable/quantum_ic_calendar_clock_vd_theme_24"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.ProjectX.Button.SortingButton"
                android:id="@+id/btn_sort_by_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_criteria_count"
                app:icon="@drawable/quantum_ic_animated_images_vd_theme_24"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_sort_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/btn_sort_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>
</LinearLayout>